objects/Lead.object
<CustomObject><businessProcesses>
<fields>
        <fullName>SFDC_Lead_Score__c</fullName>
        <description>Lead score numeric value based on Eloqua Lead Score</description>
        <formula>IF( ISPICKVAL(Hand_Raiser_Type__c,"") ,
	IF( ISPICKVAL(Scored_By_System__c, "Mintigo"),
		CASE( Mintigo_Lead_Score__c , 
		'A1', 2, 
		'A2', 2, 
		'A3', 4, 
		'A4', 3,
		'B1', 2, 
		'B2', 2, 
		'B3', 4,
		'B4', 11,
		'C1', 3, 
		'C2', 3, 
		'C3', 4, 
		'C4', 11,
		'D1', 5, 
		'D2', 6, 
		'D3', 4,
		'D4', 11, 
		'F1', 11, 
		'F2', 11, 
		'F3', 4, 
		'F4', 11, 
		17)
		,
		CASE( Lead_Score__c , 
		'A1', 2,
		'A2', 3,
		'A3', 4,
		'B1', 5,
		'B2', 6,
		'B3', 7,
		'C1', 8,
		'C2', 9,
		'C3', 10,
		'D1', 11,
		'D2', 11,
		'D3', 11,
		'A4', 11, 
		'B4', 11, 
		'C4', 11, 
		'D4', 11,
		17)
	),
	1
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The priority of the lead translated into a numeric value based on the Eloqua Lead Score, if Hand Raiser Type is not null then set priority to null regardless the lead score )</inlineHelpText>
        <label>Lead Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SFGA__CorrelationID__c</fullName>
        <defaultValue>"none"</defaultValue>
        <description>The Correlation ID Field is used by Salesforce for Google AdWords for automatic correlation of web information with new leads created through a standard web-to-lead form</description>
        <label>CorrelationID</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>SFGA__Correlation_Data__c</fullName>
        <defaultValue>"none"</defaultValue>
        <description>The Correlation Data field is designed for use by Salesforce for Google AdWords to store all relevant lead tracking information about a web generated lead</description>
        <label>Correlation Data</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>SFGA__Web_Source__c</fullName>
        <defaultValue>"none"</defaultValue>
        <description>This field is designed for future use by Salesforce for Google AdWords as an alternative to the Lead Source field for web generated leads.</description>
        <label>Web Source</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Salesforce_Lead_ID__c</fullName>
        <formula>casesafeid(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Lead ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Scored_By_System__c</fullName>
        <description>System that scored lead and passed lead over to Salesforce</description>
        <label>Scored By System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>Mintigo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial</fullName>
                    <default>true</default>
                    <label>Commercial</label>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Self_Selected_Industry__c</fullName>
        <inlineHelpText>Self Selected Industry</inlineHelpText>
        <label>Self Selected Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aerospace and Defense</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>Biotech and Pharmaceutical</fullName>
                </value>
                <value>
                    <fullName>Chemical and Petroleum</fullName>
                </value>
                <value>
                    <fullName>Communication Devices</fullName>
                </value>
                <value>
                    <fullName>Communication Infrastructure</fullName>
                </value>
                <value>
                    <fullName>Computer Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer Goods</fullName>
                </value>
                <value>
                    <fullName>Earth and Ocean Sciences</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Food and Beverage</fullName>
                </value>
                <value>
                    <fullName>Industrial Automation and Machinery</fullName>
                </value>
                <value>
                    <fullName>Instrumentation</fullName>
                </value>
                <value>
                    <fullName>Medical Devices</fullName>
                </value>
                <value>
                    <fullName>Metals, Materials and Mining</fullName>
                </value>
                <value>
                    <fullName>Other/Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Pulp and Paper</fullName>
                </value>
                <value>
                    <fullName>Rail, Ships and other Transportation</fullName>
                </value>
                <value>
                    <fullName>Semiconductor</fullName>
                </value>
                <value>
                    <fullName>Software and Internet</fullName>
                </value>
                <value>
                    <fullName>Technical Services and Consulting</fullName>
                </value>
                <value>
                    <fullName>Utilities and Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Siebel_Contact_ID__c</fullName>
        <description>Used to capture the Siebel Contact ID from Eloqua and is mapped to the cooresponding field on the Contact object, passed during conversion.  This is not exposed on the page layout.</description>
        <label>Siebel Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Simulink_Experience__c</fullName>
        <description>Experience using Simulink</description>
        <inlineHelpText>Experience using Simulink</inlineHelpText>
        <label>Simulink Experience</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never Used</fullName>
                </value>
                <value>
                    <fullName>Used in the Past</fullName>
                </value>
                <value>
                    <fullName>Current User</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>State_Province_Latin__c</fullName>
        <description>captures state value in Latin</description>
        <label>State/Province (Latin)</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory_Name__c</fullName>
        <description>Territory Name of the Account the known contact lead is associated with</description>
        <formula>Account__r.Territory_Name__c</formula>
        <label>Territory Name</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Territory__c</fullName>
        <description>Link to the sales roster for a known contact Lead</description>
        <formula>Account__r.Territory__c</formula>
        <label>Territory</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Title_Latin__c</fullName>
        <description>Used to capture the Latin version of the title field (job title)</description>
        <label>Title (Latin)</label>
        <length>75</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Total_Outbound_Attempts__c</fullName>
        <formula>Call_Attempts__c + Email_Attempts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Outbound Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>ortoo_e2a__Message_Id__c</fullName>
        <description>Ortoo Email-to-anything: Message-ID header of email that lead was created from.</description>
        <label>Message Id</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ortoo_e2a__Thread_Id__c</fullName>
        <formula>"ref:"&amp;
LEFT( $Organization.Id , 4 )&amp;
IF( BEGINS(RIGHT($Organization.Id,11), '0000000'), RIGHT($Organization.Id,4),
IF( BEGINS(RIGHT($Organization.Id,11), '000000'), RIGHT($Organization.Id,5),
IF( BEGINS(RIGHT($Organization.Id,11), '00000'), RIGHT($Organization.Id,6),
IF( BEGINS(RIGHT($Organization.Id,11), '0000'), RIGHT($Organization.Id,7),
IF( BEGINS(RIGHT($Organization.Id,11), '000'), RIGHT($Organization.Id,8),
IF( BEGINS(RIGHT($Organization.Id,11), '00'), RIGHT($Organization.Id,9),
IF( BEGINS(RIGHT($Organization.Id,11), '0'), RIGHT($Organization.Id,10), 
RIGHT($Organization.Id,11)
)))))))
&amp;"."&amp;LEFT( Id , 4 )&amp;

IF(BEGINS(RIGHT(Id,11), '0000000'), RIGHT(Id,4),
IF(BEGINS(RIGHT(Id,11), '000000'), RIGHT(Id,5),
IF(BEGINS(RIGHT(Id,11), '00000'), RIGHT(Id,6),
IF(BEGINS(RIGHT(Id,11), '0000'), RIGHT(Id,7),
IF(BEGINS(RIGHT(Id,11), '000'), RIGHT(Id,8),
IF(BEGINS(RIGHT(Id,11), '00'), RIGHT(Id,9),
IF(BEGINS(RIGHT(Id,11), '0'), RIGHT(Id,10),
RIGHT(Id,11)
))))))) &amp;":ref"</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Thread Id</label>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AMB_No_Office</fullName>
        <columns>Created_Date_Time__c</columns>
        <columns>Call_Priority__c</columns>
        <columns>FULL_NAME</columns>
        <columns>Office__c</columns>
        <columns>Eloqua_Campaign_Original__c</columns>
        <columns>Eloqua_Campaign_Most_Recent__c</columns>
        <columns>LEAD.CITY</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>Country_State_Code__c</columns>
        <columns>LEAD.COUNTRY</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATE_CODE</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Created_Date_Time__c</field>
            <operation>greaterOrEqual</operation>
            <value>11/20/2015 6:00 AM</value>
        </filters>
        <filters>
            <field>Created_Date_Time__c</field>
            <operation>lessOrEqual</operation>
            <value>11/20/2015 6:15 AM</value>
        </filters>
        <label>AMB No Office</label>
        <sharedTo />
    </listViews><listViews>
        <fullName>Australia_Unnassigned</fullName>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>MathWorks Australia</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>Australia Unassigned</label>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>AU_Sales_Manager_Stephane_Marouani</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Sales_Ops</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>China_Unnassigned</fullName>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>MathWorks China</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>China Unassigned</label>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>CN_Sales_Manager_Charles_Cao</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>CN_Sales_Support</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Sales_Ops</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>DE_UnassignedEDU</fullName>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>MathWorks Germany</value>
        </filters>
        <filters>
            <field>Sector__c</field>
            <operation>equals</operation>
            <value>Education,Student</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>DE Unassigned EDU</label>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>DE_Sales_Manager_Andreas_Schindler</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DE_Sales_Support</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>DE_Unassigned_CommGov</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>MathWorks Germany</value>
        </filters>
        <filters>
            <field>Sector__c</field>
            <operation>notEqual</operation>
            <value>Education,Student</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>DE Unassigned CommGov</label>
        <language>en_US</language>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>DE_Sales_Manager_Andreas_Schindler</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DE_Sales_Support</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Gianluca_Pepi</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Line_Verselder</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>EMEA_Direct_Unassigned</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Eloqua_Campaign_Most_Recent__c</columns>
        <columns>Outcome__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>EMEA Direct Non Office</value>
        </filters>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>Natick - EMEA</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>EMEA Direct Unassigned</label>
        <language>en_US</language>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>EMEA_Direct_Lead_View_Access</group>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>EMEA_Indirect_Sales_Manager_Bertrand_Thaon</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>FR_Sales_Manager_Jean_Luc_Metaireau</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Gianluca_Pepi</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Line_Verselder</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Sales_Ops</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>EMEA_Direct_Unassigned_CommGov</fullName>
        <booleanFilter>(1 OR 4) AND 2 AND 3</booleanFilter>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>EMEA Direct Non Office</value>
        </filters>
        <filters>
            <field>Sector__c</field>
            <operation>notEqual</operation>
            <value>Education,Student</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>Natick - EMEA</value>
        </filters>
        <label>EMEA Direct Unassigned CommGov</label>
        <language>en_US</language>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>EMEA_Direct_Lead_View_Access</group>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>EMEA_Indirect_Sales_Manager_Bertrand_Thaon</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Gianluca_Pepi</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Line_Verselder</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>EMEA_Direct_Unassigned_EDU</fullName>
        <booleanFilter>(1 OR 4) AND 2 AND 3</booleanFilter>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>EMEA Direct Non Office</value>
        </filters>
        <filters>
            <field>Sector__c</field>
            <operation>equals</operation>
            <value>Education,Student</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>Natick - EMEA</value>
        </filters>
        <label>EMEA Direct Unassigned EDU</label>
        <language>en_US</language>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>EMEA_Direct_Lead_View_Access</group>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>EMEA_Indirect_Sales_Manager_Bertrand_Thaon</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>FR_Sales_Manager_Jean_Luc_Metaireau</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Gianluca_Pepi</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Line_Verselder</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>Faina</fullName>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>Mathworks Germany</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>DE Unassigned</label>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>DE_Sales_Manager_Andreas_Schindler</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>DE_Sales_Support</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Sales_Ops</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>France_Unassigned</fullName>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>MathWorks France</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>France Unassigned</label>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>FR_Sales_Support</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Sales_Ops</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>France_Unassigned_CommG</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>MathWorks France</value>
        </filters>
        <filters>
            <field>Sector__c</field>
            <operation>notEqual</operation>
            <value>Education,Student</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>France Unassigned CommGov</label>
        <language>en_US</language>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>FR_Sales_Support</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Gianluca_Pepi</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Line_Verselder</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>France_Unassigned_EDU</fullName>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>MathWorks France</value>
        </filters>
        <filters>
            <field>Sector__c</field>
            <operation>equals</operation>
            <value>Education,Student</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>France Unassigned EDU</label>
        <language>en_US</language>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>FR_Sales_Support</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Gianluca_Pepi</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IE_Sales_Support_Manager_Line_Verselder</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>India_Unassigned</fullName>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.STATE_CODE</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>MathWorks India</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>India Unassigned</label>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <group>View_Sales_List_Views</group>
            <roleAndSubordinatesInternal>IN_AE_Manager_Kishore_Rao</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IN_Sales_Manager_Jayant_Bhadauria</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>IN_Sales_Support</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>Sales_Ops</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>InterCross_UPDATE_Unassigned_Known</fullName>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Eloqua_Campaign_Most_Recent__c</columns>
        <columns>Lead_Follow_Up_Date__c</columns>
        <columns>Outcome__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <columns>LEAD.LAST_UPDATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>Natick - EMEA</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Known_Contact</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>InterCross UPDATE Unassigned Known</label>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>EMEA_Indirect_Sales_Manager_Bertrand_Thaon</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews><listViews>
        <fullName>InterCross_UPDATE_Unassigned_Unknown</fullName>
        <columns>Call_Priority__c</columns>
        <columns>SFDC_Lead_Score__c</columns>
        <columns>FULL_NAME</columns>
        <columns>LEAD.TITLE</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>Eloqua_Campaign_Most_Recent__c</columns>
        <columns>Lead_Follow_Up_Date__c</columns>
        <columns>LEAD.STATUS</columns>
        <columns>Outcome__c</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>Territory_Name__c</columns>
        <columns>LEAD.COUNTRY_CODE</columns>
        <columns>Lead_Age_Hours__c</columns>
        <columns>Total_Outbound_Attempts__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Office__c</field>
            <operation>equals</operation>
            <value>Natick - EMEA</value>
        </filters>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Unknown_Contact</value>
        </filters>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed - Converted,Closed - Unconverted</value>
        </filters>
        <label>InterCross UPDATE Unassigned Unknown</label>
        <queue>Unassigned_Lead</queue>
        <sharedTo>
            <roleAndSubordinatesInternal>EMEA_Indirect_Sales_Manager_Bertrand_Thaon</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>    </validationRules></CustomObject>